# sqlnbfmt

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  README.md  SECURITY.md  config.yaml  pyproject.toml
.github/workflows/: ci-and-publish.yml
jupyter-config/: sqlnbfmt.json
sqlnbfmt/: __init__.py  formatter.py  jupyterlab_integration.py
tests/: test_eval.py  test_formatter.py  test_jupyterlab_integration.py  test_marimo.py  test_notebook.ipynb  test_notebook_copy.ipynb
tests/eval/: README.md  generate_fixtures.py
tests/eval/basic_select/: expected.ipynb  input.ipynb
tests/eval/case_expression/: expected.ipynb  input.ipynb
tests/eval/comment_preservation/: expected.ipynb  input.ipynb
tests/eval/cte/: expected.ipynb  input.ipynb
tests/eval/fstring_variables/: expected.ipynb  input.ipynb
tests/eval/group_by_having/: expected.ipynb  input.ipynb
tests/eval/idempotency/: expected.ipynb  input.ipynb
tests/eval/in_function_sql/: expected.ipynb  input.ipynb
tests/eval/joins/: expected.ipynb  input.ipynb
tests/eval/magic_commands/: expected.ipynb  input.ipynb
tests/eval/marimo_basic_sql/: input.py
tests/eval/marimo_comment_preservation/: expected.py  input.py
tests/eval/marimo_complex_sql/: expected.py  input.py
tests/eval/marimo_fstring_interpolation/: expected.py  input.py
tests/eval/marimo_idempotency/: input.py
tests/eval/marimo_multi_cell_mixed/: expected.py  input.py
tests/eval/marimo_multi_statement/: expected.py  input.py
tests/eval/marimo_non_sql_unchanged/: expected.py
tests/eval/marimo_skip_hint/: input.py
tests/eval/multi_cell_mixed/: expected.ipynb  input.ipynb
tests/eval/multi_statement/: expected.ipynb  input.ipynb
tests/eval/non_sql_unchanged/: expected.ipynb  input.ipynb
tests/eval/skip_hint/: expected.ipynb  input.ipynb
tests/eval/subquery/: expected.ipynb  input.ipynb
tests/eval/union/: expected.ipynb  input.ipynb
tests/eval/window_function/: expected.ipynb  input.ipynb
