[project]
name = "sqlnbfmt"
version = "0.1.9"
description = "A tool to format SQL code in Jupyter notebooks."
authors = [
  { name = "Qing", email = "qingye779@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "nbformat>=5.10.4",
    "pyyaml>=6.0.2",
    "sqlglot>=25.27.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
sqlnbfmt = "sqlnbfmt.formatter:main"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[tool.setuptools.package-data]
sqlnbfmt = [".pre-commit-hooks.yaml"]
