[project]
name = "sqlnbfmt"
version = "0.4.0"
description = "A tool to format SQL code in Jupyter notebooks and Marimo notebooks."
authors = [
  { name = "Qing", email = "qingye779@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["sql", "jupyter", "marimo", "notebook", "formatter", "sqlglot", "pre-commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Jupyter",
]
dependencies = [
    "nbformat>=5.10.4",
    "pyyaml>=6.0.2",
    "sqlglot>=25.27.0",
]

[project.urls]
Homepage = "https://github.com/flyersworder/sqlnbfmt"
Repository = "https://github.com/flyersworder/sqlnbfmt"
Changelog = "https://github.com/flyersworder/sqlnbfmt/blob/main/CHANGELOG.md"
Issues = "https://github.com/flyersworder/sqlnbfmt/issues"

[project.scripts]
sqlnbfmt = "sqlnbfmt.formatter:main"

[dependency-groups]
dev = [
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.1",
    "pytest>=8.3.3",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test."
]

[tool.ruff]
extend-exclude = ["tests/eval/*/"]

[tool.setuptools.package-data]
sqlnbfmt = [".pre-commit-hooks.yaml"]
